fix blurry ghostty

--- a/gnome/gtk4.css
+++ b/gnome/gtk4.css
@@ -123,10 +123,6 @@ windowcontrols > button.minimize:hover {
   opacity: 0.8;
 }
 
-.top-bar {
-  background: rgba(0, 0, 0, 0.9);
-  color: white;
-}
 .navigation-sidebar {
   background: rgba(0, 0, 0, 0.9);
   color: white;
@@ -136,7 +132,7 @@ windowcontrols > button.minimize:hover {
   background: rgba(0, 0, 0, 0.9);
 }
 
-window,
+window:not(.adw),
 .background decoration {
   border: 0.5px solid rgba(100, 0, 0, 0.8);
 }
@@ -146,7 +142,8 @@ window,
   background: rgba(0, 0, 0, 0.9);
 }
 
-.top-bar {
+.top-bar:not(window.adw) {
   border-bottom: 1px solid rgba(100, 0, 0, 0.8);
   background: rgba(0, 0, 0, 0.9);
+  color: white;
 }
